@@ -4,6 +4,7 @@ o Add opam file in-source
 o Cope with more malformed bookmarks
 o Remember and reapply inline image decode parameters
 o Pdfimage extracts and stores JBIG2Globals
+o Option to compress a stream only if it is made smaller
 
 2.6 (July 2023)
 
